--- a/css/style1.css
+++ b/css/style1.css
@@ -196,7 +196,6 @@ nav {
     background-color: #1b1919;
     width: 100%;
     height: 90vh;
-    border-bottom: 1px solid var(--color-accent1);
     border-top: 1px solid rgb(219, 218, 218);
 }
 
@@ -309,8 +308,8 @@ nav {
     width: 100%;
     height: 200vh;
     background-color: #1b1919;
-    border-top: 2px solid var(--color-accent1);
-    border-bottom: 2px solid var(--color-accent1);
+    border-top: 1px solid rgb(219, 218, 218);
+    border-bottom: 1px solid rgb(219, 218, 218);
     display: flex;
     align-items: center;
     flex-direction: column;
