--- a/css/style1.css
+++ b/css/style1.css
@@ -1,135 +1,4 @@
-/* barra de navegacion */
-/* barra de navegacion */
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Times New Roman', Times, serif;
-}
 
-body{
-    height: 400vh;
-    width: 100%;
-}
-
-:root {
-    --color-primary: #000000; /* Negro */
-    --color-secondary: #b4b0b0; /* Blanco */
-    --color-accent1: #FF5733; /* Color de acento 1 */
-    --color-accent2: #33FF57; /* Color de acento 2 */
-    --color-blue:  #3cceae;
-}
-
-/* Estilo del scrollbar */
-::-webkit-scrollbar {
-    width: 10px; /* Ancho del scrollbar */
-}
-
-/* Estilo del thumb (la parte móvil del scrollbar) */
-::-webkit-scrollbar-thumb {
-    background: #000000; /* Color del thumb */
-    border-radius: 5px; /* Borde redondeado del thumb */
-}
-
-/* Estilo del track (la pista del scrollbar) */
-::-webkit-scrollbar-track {
-    background: #470000; 
-}
-
-
-
-.header {
-  position: fixed;
-  background-color: var(--color-primary);
-  height: 13vh;
-  width: 100%;
-  opacity: 0.9;
-  z-index: 99;
-}
-
-header {
-  width: 100%;
-  height: 100%;
-}
-
-nav {
-  width: 100%;
-  height: 100%;
-}
-
-.img {
-  position: absolute;
-  left: 15px;
-  top: 8px;
-  width: 85px;
-  height: 60px;
-}
-
-.barra-navegacion {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  grid-template-columns: repeat(6, 6%);
-  grid-template-rows: 100%;
-  color: var(--color-accent1);
-  font-size: 16px;
-  gap: 3%;
-}
-
-
-.lista {
-  text-align: center;
-  width: 3.9rem;
-  padding: 0.5rem;
-}
-
-.lista:hover {
-  text-align: center;
-  border-radius: 5px;
-  background-color: var(--color-secondary);
-}
-
-.bi bi-bag:hover {
-  background-color: var(--color-secondary);
-}
-
-.carrito {
-  position: absolute;
-  right: 6%;
-}
-
-/* Ajustes para pantallas pequeñas */
-
-@media (max-width: 700px) {
-  .header {
-    height: 10vh;
-  }
-
-  .img {
-    position: absolute;
-    top: 1rem;
-    width: 3rem;
-    height: 2.5rem;
-  }
-  
-
-  .barra-navegacion {
-    display: flex;
-    justify-content: center;
-    font-size: 0.8rem;
-    gap: .1rem;
-  }
-
-  .lista{
-    width: fit-content;
-  }
-  
-  .lista:hover{
-    background-color: #33FF57;
-  }
-}
 
 
 
@@ -380,56 +249,12 @@ nav {
     font-size: 40px;
 }
 
-@media (max-width: 1200px) {
-    #men,
-    #woman {
-        justify-self: center;
-        width: 500px;
-        height: 350px;
-        border-radius: 10px;
-        overflow: hidden;
-    }
-    .carruseles,
-    .carruseles2 {
-        grid-template-columns: repeat(8, 245px);
-        height: 350px;
-    }
-}
-
-@media (max-width: 700px) {
-    #men,
-    #woman {
-        justify-self: center;
-        width: 300px;
-        height: 250px;
-        border-radius: 10px;
-        overflow: hidden;
-        display: grid;
-    }
-    .carruseles,
-    .carruseles2 {
-        display: grid;
-        grid-template-columns: repeat(8, 300px);
-        height: 250px;
-    }
-
-    #at,#A{
-        left: -20px;
-    }
-    #ade, #a{
-        right: -20px;
-    }
-}
-
-
-
-/*penultimmo*/
 
 /* Estilos para la sección "ultimo" */
 .ultimo {
     background-color: #000000; /* Color de fondo */
     padding: 50px 0; /* Espaciado interno */
-    height: 50vh;
+    height: 100%;
 }
 
 /* Estilos para el pie de página */
@@ -439,7 +264,7 @@ footer {
 
 /* Estilos para el contenedor */
 .container {
-    max-width: 1200px; /* Ancho máximo */
+    max-width: 90%; /* Ancho máximo */
     margin: 0 auto; /* Centrar horizontalmente */
 }
 
@@ -511,4 +336,75 @@ footer {
 
 
 
+
+
+
+@media (max-width: 1200px) {
+    #men,
+    #woman {
+        justify-self: center;
+        width: 500px;
+        height: 350px;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    .carruseles,
+    .carruseles2 {
+        grid-template-columns: repeat(8, 245px);
+        height: 350px;
+    }
+
+    .footer-content {
+        display: flex; /* Mostrar en fila */
+        flex-direction: column;
+        gap: 30%;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+
+@media (max-width: 700px) {
+    #men,
+    #woman {
+        justify-self: center;
+        width: 100px;
+        height: 250px;
+        border-radius: 10px;
+        overflow: hidden;
+        display: grid;
+    }
+    .carruseles,
+    .carruseles2 {
+        display: grid;
+        grid-template-columns: repeat(8, 100px);
+        height: 250px;
+    }
+
+    #at,#A{
+        left: -20px;
+    }
+    #ade, #a{
+        right: -20px;
+    }
+
+    /* Estilos para el contenedor */
+    .container {
+        max-width: 90%; /* Ancho máximo */
+        margin: 0 auto; /* Centrar horizontalmente */
+    }
+
+    .footer-content {
+        display: flex; /* Mostrar en fila */
+        flex-direction: column;
+        gap: 30%;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+
+
+
+/*penultimmo*/
 
