--- a/css/vistas.css
+++ b/css/vistas.css
@@ -84,21 +84,26 @@
     position: relative;
     bottom: 10px;
     margin-top: 20px;
-    font-size: 25PX;
+    font-size: 2vh;
 
 
+}
+
+.cop{
+    font-size: 2vh;
 }
 
 .uno{
     position: relative;
     bottom: 7px;
-    font-size: 40px;
+    font-size: 4vh;
 
 
 }
 
 .dos{
-    margin-top: 20px;
+    margin: 20px;
+    font-size: 1.5vh;
 }
 
 
@@ -116,19 +121,6 @@
 
 }
 
-.tallas-calzado{
-    display: none;
-    position: relative;
-    width: 40%;
-    height: 12%;
-    justify-content: start;
-    align-items: end;
-    flex-direction: row;
-    top: 30px;
-    left: 2%;
-    gap: 10px;
-    color: aliceblue;
-}
 
 .tallas-calzado button{
     border-radius: 100px;
@@ -156,8 +148,8 @@
 
 .cantidades{
     position: relative;
-    top: 150px;
-    left: 35%;
+    top: 37%;
+    left: 15%;
 }
 
 .cantidades button{
@@ -327,19 +319,24 @@ input[type="email"]:focus {
         width: 60%;
         height: 80%;
     }
-    .formulario {
 
-        position: relative;
-        max-width: 500px;
-        margin: 0 auto;
-        padding: 20px;
-        right: 15%;
-        border-radius: 5px;
-        background-color: #050505;
-    }
     .formulario {
         position: relative;
         left: 1%;
+    }
+
+    .uno-uno{
+        font-size: .8rem;
+    }
+    .uno{
+        font-size: 1.2rem;
+
+    }
+    .cop{
+        font-size: 1rem;
+    }
+    .dos{
+        font-size: .5rem;
     }
 
     .caja-imagenes{
@@ -352,6 +349,9 @@ input[type="email"]:focus {
         width: 100%;
         height: 80%;
     }
+
+
+
 }
 
 @media (max-width: 900px) {
@@ -375,6 +375,9 @@ input[type="email"]:focus {
         width: 60%;
         height: 70%;
 
+    }
+    .formulario {
+        width: 80%;
     }
     .des-imagenes{
         grid-template-columns: repeat(4, 1fr);
@@ -462,7 +465,7 @@ input[type="email"]:focus {
     }
 
     .des-imagenes{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
        
     }
 
