--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ li button{
         visibility: hidden;
         transition: .2s;
         z-index: 99;
+        overflow-y: scroll;
     }
 
     .aside-visible {
@@ -267,6 +268,17 @@ li button{
         display: block;
         top: 20px;
         right: 20px;
+    }
+
+    .logo12 {
+        position: relative;
+        background-image: url(/images/logo/logo.jpg);
+        background-size: 100% 100%;
+        width: 20%;
+        height: 10%;
+        top: 4%;
+        border-radius: 10px;
+    
     }
     .contenedor-productos {
         grid-template-columns: repeat(2, 1fr);
