--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ ul {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 3%;
+    gap: 2%;
 
 }
 
@@ -80,7 +80,7 @@ li:hover{
 }
 
 li button{
-    font-size: 20px;
+    font-size: 15px;
     text-transform: capitalize;
 }
 
@@ -108,8 +108,8 @@ li button{
     position: relative;
     background-image: url(/images/logo/logo.jpg);
     background-size: 100% 100%;
-    width: 10%;
-    height: 40%;
+    width: 5%;
+    height: 50%;
     bottom: 2%;
     border-radius: 10px;
 
@@ -125,10 +125,11 @@ li button{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content:space-between;
-    column-gap: 30px;
+    justify-content:center;
+    column-gap: 5%;
     row-gap: 100px;
-    padding: 7%;
+    padding: 8%;
+    padding-right: 15%;
 }
 
 
