--- a/css/style1.css
+++ b/css/style1.css
@@ -14,7 +14,7 @@
     height: 100%;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../client/img/d.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/f.jpeg);
     /* El degradado oscuro está formado por dos puntos rgba(0, 0, 0, 0.5) que representan negro con 50% de opacidad */
 }
 
@@ -384,10 +384,12 @@ footer {
     }
 
     #at,#A{
-        left: -20px;
+        left: 80px;
+        top: 35rem;
     }
     #ade, #a{
-        right: -20px;
+        right: 80px;
+        top: 35rem;
     }
 
     /* Estilos para el contenedor */
