--- a/css/style1.css
+++ b/css/style1.css
@@ -25,15 +25,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: var(--color-blue);
+    color: white;
 }
 
 .eslogan h2{
     font-size: 1.9rem;
+    color: white;
 }
 
 .eslogan p{
     font-size: 1.4rem;
+    color: white;
 }
 
 @media (max-width: 700px){
@@ -62,7 +64,7 @@
 /* cuerpo  two*/
 
 .cuerpo-two{
-    background-color: #1b1919;
+    background-color: #0b0c0e;
     width: 100%;
     height: 90vh;
     border-top: 1px solid rgb(219, 218, 218);
@@ -75,6 +77,7 @@
     align-items: center;
     flex-direction: row;
     gap: 20%;
+    color: white;
 
 }
 
@@ -107,7 +110,7 @@
     background-color: #131111;
     opacity: 0.8;
     border-radius: 10px;
-    color: var(--color-secondary);
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,13 +179,14 @@
 .categorias2 {
     width: 100%;
     height: 200vh;
-    background-color: #1b1919;
+    background-color: #0b0c0e;
     border-top: 1px solid rgb(219, 218, 218);
     border-bottom: 1px solid rgb(219, 218, 218);
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 40px;
+    color: white;
 }
 
 .caja,
@@ -196,7 +200,7 @@
 .categorias,
 .categorias2 h2 {
     color: var(--color-secondary);
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .mujeres {
