--- a/css/vistas.css
+++ b/css/vistas.css
@@ -36,11 +36,25 @@
     position: absolute;
     right: 0;
     top: 50%;
+    background-color: #000000;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    width: 5%;
+    height: 5%;
+
 }
 
 .atras{
     position: absolute;
     top: 50%;
+    background-color: #000000;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    height: 5%;
+    width: 5%;
+
 }
 
 
@@ -53,7 +67,10 @@
     justify-content: space-between;
     flex-direction: column;
     border-radius: 10px;
-    background-color: #2e2b2b;
+    background-color: #161515;
+    border: 1px solid blue;
+    box-shadow: 3px 3px 3px 2px rgb(33, 10, 139);
+
 }
 
 .info{
@@ -156,6 +173,8 @@
     width: 30px;
     height: 25px;
     border-radius: 500px;
+    background-color: #000000;
+    border: none;
 }
 
 .color{
@@ -190,15 +209,20 @@
 
 #lista{
     position: absolute;
-    right: 30vh;
-    bottom: 15px;
+    right: 15%;
+    bottom: 4%;
     width: 100px;
     height: 30px;
-    color: #000000;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #000000;
+    border: none;
+    border-radius: 10px;
 }
 #lista option {
-    color: #333; /* Color por defecto del texto de las opciones */
-    background-color: #a10000; /* Color por defecto del fondo de las opciones */
+    color: #ffffff; /* Color por defecto del texto de las opciones */
+    background-color: #332f2f; /* Color por defecto del fondo de las opciones */
 }
 
 #lista option:checked {
@@ -217,7 +241,7 @@
 
 #lista option[value="azul"] {
     color: blue; /* Cambia el color del texto de la opción "azul" a azul */
-    background-color: lightblue; /* Cambia el color de fondo de la opción "azul" a azul claro */
+    background-color: rgb(22, 23, 24); /* Cambia el color de fondo de la opción "azul" a azul claro */
 }
 
 
@@ -334,8 +358,10 @@ input[type="email"]:focus {
 }
 
 .pagosepay{
-    color: #000000;
+    color: #ffffff;
     text-transform: uppercase;
+    background-color: #000000;
+    border: 1px solid blue;
 }
 
 /* Media Query para 1400px */
