--- a/css/vistas.css
+++ b/css/vistas.css
@@ -170,11 +170,15 @@
 }
 
 .cantidades button{
-    width: 30px;
-    height: 25px;
-    border-radius: 500px;
+    width: 5rem;
+    height: 2rem;
+    border-radius: 100%;
     background-color: #000000;
     border: none;
+}
+.cantidades button:hover{
+    background-color: grey;
+    opacity: 0.8;
 }
 
 .color{
@@ -549,4 +553,52 @@ input[type="email"]:focus {
 
 
 
+
+.colores-tipos{
+    width: 30%;
+    height: 20%;
+    position: relative;
+    right: 38%;
+    top: 15%;
+    display: grid ;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.imagen_tip{
+    display: flex;
+    height: 100%;
+    width: 4rem;
+}
+
+.imagen_tip:hover{
+    border: 1px solid blueviolet;
+    box-shadow: 2px 2px 2px 1px rgb(33, 10, 139);
+}
+.imagen_tip img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#colores_gl{
+    display: flex;
+    flex-direction: row;
+    width: 500px;
+    position: relative;
+    top: 5%;
+}
+#colores_gl div {
+    display: grid;
+    width: 2rem;
+    height: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    border-radius: 100%;
+
+}
+
+#colores_gl div:hover{
+    border: 1px solid blueviolet;
+    box-shadow: 2px 2px 2px 1px rgb(33, 10, 139);
+}
 
