--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ body {
     font-family: 'Rubik', sans-serif; /* Cambio de fuente */
     background-color: #0b0c0e;
     overflow-x: hidden;
-    margin: 0; /* Añadido para resetear margen */
+    margin: 0;
+    height: 170vh;
 }
 
 .header-mobile {
